# tests/fixtures/openapi.json
@@ -2070,6 +2070,21 @@
        "default": 200,
        "type": "integer"
       }
+     },
+     {
+      "in": "query",
+      "name": "workspace_id",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
+      }
      }
     ],
     "responses": {
